2004-09-12 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/mcs51/ralloc.c (packRegisters): applied fix by Bernhard Held
	  for bugs 898889 & 979599. Also used some safer print instructions.

2004-09-12 Vangelis Rokas <vrokas AT otenet.gr>

	* src/pic16/device.h (pic16_options_t): added field use_crt,
	crt_name, no_crt,
	* src/pic16/genarith.c (pic16_genPlus): added an assert(0) line to
	catch a probable future bug,
	* src/pic16/gen.c: aopIdx function commented out,
	* (genAssign): commented out old code which used aopIdx,
	* src/pic16/glue.c (pic16glue): removed some legacy fragments of
	code, added if conditionals to take into account the --use-crt
	command line options,
	* src/pic16/main.c (pic16_optionsTable): added new command line
	options, --use-crt= and --no-crt,
	* (_pic16_linkEdit): now the proper crt object is added in the
	linker command line except than when --no-crt is specified,
	* src/pic16/pcode.c,
	* src/pic16/pcode.h: added some structures and functions for a new
	optimization scheme to compansete for instruction overhead between
	same iCodes, this scheme is currently under development and is not
	working in any way,
	* src/pic16/gen.c (genAnd): added patch provided by Aaron Collwell
	to && operator,
	* device/lib/pic16/startup/crt0i.c,
	* device/lib/pic16/startup/crt0iz.c: added global char variable
	__uflags to force the generation of an idata section


2004-09-12 Bernhard Held <bernhard AT bernhardheld.de>

	* doc/Makefile,
	* doc/clean.mk: added support for easy creation of sdcc-doc.tar.bz2
	* doc/sdccman.lyx: updated sdcc version to 2.4.4

2004-09-10 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* doc/sdccman.lyx: fixed a problem with my new index entries (thanks
	Frieder) and clarified the default code optimization mode

2004-09-10 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCC.lex (doPragma, process_pragma),
	* src/SDCCglobl.h (struct optimize): added pragmas "opt_code_speed",